tests/snapshots/integration_tests__example_primitives_Einsum.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Einsum(equation):
  inputs:
    a: [*shape_a]
    b: [*shape_b]
  outputs:
    default: [*shape_out]
  impl:
    Source: core,operations/Einsum
