tests/snapshots/integration_tests__example_primitives_Fork3.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Fork3:
  inputs:
    default: [*shape]
  outputs:
    a: [*shape]
    b: [*shape]
    c: [*shape]
  impl:
    Source: core,structural/Fork3
