tests/snapshots/integration_tests__example_primitives_LayerNorm.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron LayerNorm(dim):
  inputs:
    default: [*shape, dim]
  outputs:
    default: [*shape, dim]
  impl:
    Source: core,normalization/LayerNorm
