tests/snapshots/integration_tests__example_primitives_Mish.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Mish:
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,activations/Mish
