tests/snapshots/integration_tests__example_primitives_Multiply.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Multiply:
  inputs:
    a: [*shape]
    b: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,structural/Multiply
