tests/snapshots/integration_tests__example_primitives_PReLU.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron PReLU(num_parameters = 1, init = 0.25):
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,activations/PReLU
