tests/snapshots/integration_tests__example_primitives_RMSNorm.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron RMSNorm(dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  impl:
    Source: core,normalization/RMSNorm
